bizinikiwi/pezframe/support/test/tests/pezpallet_ui/type_value_forgotten_where_clause.stderr
error[E0277]: the trait bound `<T as pezframe_system::Config>::AccountId: From<u32>` is not satisfied
  --> tests/pezpallet_ui/type_value_forgotten_where_clause.rs:41:37
   |
41 |     #[pezpallet::type_value] fn Foo<T: Config>() -> u32 { 3u32 }
   |                                        ^^^^^^ the trait `From<u32>` is not implemented for `<T as pezframe_system::Config>::AccountId`
   |
note: required by a bound in `pezpallet::Config`
  --> tests/pezpallet_ui/type_value_forgotten_where_clause.rs:25:54
   |
24 |     pub trait Config: pezframe_system::Config
   |               ------ required by a bound in this trait
25 |     where <Self as pezframe_system::Config>::AccountId: From<u32>
   |                                                         ^^^^^^^^^ required by this bound in `Config`
help: consider further restricting the associated type
   |
41 |     #[pezpallet::type_value] fn Foo<T: Config>() -> u32 where <T as pezframe_system::Config>::AccountId: From<u32> { 3u32 }
   |                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `<T as pezframe_system::Config>::AccountId: From<u32>` is not satisfied
  --> tests/pezpallet_ui/type_value_forgotten_where_clause.rs:41:15
   |
41 |     #[pezpallet::type_value] fn Foo<T: Config>() -> u32 { 3u32 }
   |                  ^^^^^^^^^^ the trait `From<u32>` is not implemented for `<T as pezframe_system::Config>::AccountId`
   |
note: required by a bound in `pezpallet::Config`
  --> tests/pezpallet_ui/type_value_forgotten_where_clause.rs:25:54
   |
24 |     pub trait Config: pezframe_system::Config
   |               ------ required by a bound in this trait
25 |     where <Self as pezframe_system::Config>::AccountId: From<u32>
   |                                                         ^^^^^^^^^ required by this bound in `Config`
help: consider further restricting the associated type
   |
41 |     #[pezpallet::type_value where <T as pezframe_system::Config>::AccountId: From<u32>] fn Foo<T: Config>() -> u32 { 3u32 }
   |                             ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `<T as pezframe_system::Config>::AccountId: From<u32>` is not satisfied
  --> tests/pezpallet_ui/type_value_forgotten_where_clause.rs:41:15
   |
41 |     #[pezpallet::type_value] fn Foo<T: Config>() -> u32 { 3u32 }
   |                  ^^^^^^^^^^ the trait `From<u32>` is not implemented for `<T as pezframe_system::Config>::AccountId`
   |
note: required by a bound in `pezpallet::Config`
  --> tests/pezpallet_ui/type_value_forgotten_where_clause.rs:25:54
   |
24 |     pub trait Config: pezframe_system::Config
   |               ------ required by a bound in this trait
25 |     where <Self as pezframe_system::Config>::AccountId: From<u32>
   |                                                         ^^^^^^^^^ required by this bound in `Config`
help: consider further restricting the associated type
   |
41 |     #[pezpallet::type_value] fn Foo<T: Config>() -> u32 where <T as pezframe_system::Config>::AccountId: From<u32> { 3u32 }
   |                                                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
